src/OpenCvSharp.Native/include/open_cv_sharp/ximgproc/ximgproc.h

typedef struct jyppx_ocv_ximgproc_guided_filter jyppx_ocv_ximgproc_guided_filter;
typedef struct jyppx_ocv_ximgproc_fast_global_smoother_filter jyppx_ocv_ximgproc_fast_global_smoother_filter;
typedef struct jyppx_ocv_ximgproc_superpixel_slic jyppx_ocv_ximgproc_superpixel_slic;
typedef struct jyppx_ocv_ximgproc_superpixel_seeds jyppx_ocv_ximgproc_superpixel_seeds;
typedef struct jyppx_ocv_ximgproc_superpixel_lsc jyppx_ocv_ximgproc_superpixel_lsc;
typedef struct jyppx_ocv_ximgproc_fast_line_detector jyppx_ocv_ximgproc_fast_line_detector;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ni_black_threshold(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double max_value,
    int type,
    int block_size,
    double k,
    int binarization_method,
    double r);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_thinning(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int thinning_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_anisotropic_diffusion(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    float alpha,
    float k,
    int niters);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_joint_bilateral_filter(
    const jyppx_ocv_mat* joint,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int d,
    double sigma_color,
    double sigma_space,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_guided_filter_run(
    const jyppx_ocv_mat* guide,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int radius,
    double eps,
    int ddepth,
    double scale);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_rolling_guidance_filter(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int d,
    double sigma_color,
    double sigma_space,
    int num_of_iter,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_weighted_median_filter(
    const jyppx_ocv_mat* joint,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int r,
    double sigma,
    int weight_type,
    const jyppx_ocv_mat* mask);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_dt_filter(
    const jyppx_ocv_mat* guide,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double sigma_spatial,
    double sigma_color,
    int mode,
    int num_iters);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_am_filter(
    const jyppx_ocv_mat* joint,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double sigma_s,
    double sigma_r,
    int adjust_outliers);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_bilateral_texture_filter(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int fr,
    int num_iter,
    double sigma_alpha,
    double sigma_avg);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_preserving_filter(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int d,
    double threshold);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_global_smoother_filter_run(
    const jyppx_ocv_mat* guide,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double lambda,
    double sigma_color,
    double lambda_attenuation,
    int num_iter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_l0_smooth(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double lambda,
    double kappa);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_hough_transform(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int dst_mat_depth,
    int angle_range,
    int op,
    int make_skew);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_hough_point_to_line(
    int hough_x,
    int hough_y,
    const jyppx_ocv_mat* src_img_info,
    int angle_range,
    int make_skew,
    int rules,
    int* x1,
    int* y1,
    int* x2,
    int* y2);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_pei_lin_normalization(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_guided_filter_create(
    const jyppx_ocv_mat* guide,
    int radius,
    double eps,
    double scale,
    jyppx_ocv_ximgproc_guided_filter** filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_guided_filter_release_handle(
    jyppx_ocv_ximgproc_guided_filter* filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_guided_filter_filter(
    jyppx_ocv_ximgproc_guided_filter* filter,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ddepth);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_global_smoother_filter_create(
    const jyppx_ocv_mat* guide,
    double lambda,
    double sigma_color,
    double lambda_attenuation,
    int num_iter,
    jyppx_ocv_ximgproc_fast_global_smoother_filter** filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_fast_global_smoother_filter_release_handle(
    jyppx_ocv_ximgproc_fast_global_smoother_filter* filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_global_smoother_filter_filter(
    jyppx_ocv_ximgproc_fast_global_smoother_filter* filter,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_slic_create(
    const jyppx_ocv_mat* image,
    int algorithm,
    int region_size,
    float ruler,
    jyppx_ocv_ximgproc_superpixel_slic** superpixel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_superpixel_slic_release_handle(
    jyppx_ocv_ximgproc_superpixel_slic* superpixel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_slic_get_number(
    const jyppx_ocv_ximgproc_superpixel_slic* superpixel,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_slic_iterate(
    jyppx_ocv_ximgproc_superpixel_slic* superpixel,
    int num_iterations);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_slic_get_labels(
    const jyppx_ocv_ximgproc_superpixel_slic* superpixel,
    jyppx_ocv_mat* labels);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_slic_get_label_contour_mask(
    const jyppx_ocv_ximgproc_superpixel_slic* superpixel,
    jyppx_ocv_mat* image,
    int thick_line);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_slic_enforce_label_connectivity(
    jyppx_ocv_ximgproc_superpixel_slic* superpixel,
    int min_element_size);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_seeds_create(
    int image_width,
    int image_height,
    int image_channels,
    int num_superpixels,
    int num_levels,
    int prior,
    int histogram_bins,
    int double_step,
    jyppx_ocv_ximgproc_superpixel_seeds** superpixel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_superpixel_seeds_release_handle(
    jyppx_ocv_ximgproc_superpixel_seeds* superpixel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_seeds_get_number(
    jyppx_ocv_ximgproc_superpixel_seeds* superpixel,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_seeds_iterate(
    jyppx_ocv_ximgproc_superpixel_seeds* superpixel,
    const jyppx_ocv_mat* image,
    int num_iterations);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_seeds_get_labels(
    jyppx_ocv_ximgproc_superpixel_seeds* superpixel,
    jyppx_ocv_mat* labels);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_seeds_get_label_contour_mask(
    jyppx_ocv_ximgproc_superpixel_seeds* superpixel,
    jyppx_ocv_mat* image,
    int thick_line);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_lsc_create(
    const jyppx_ocv_mat* image,
    int region_size,
    float ratio,
    jyppx_ocv_ximgproc_superpixel_lsc** superpixel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_superpixel_lsc_release_handle(
    jyppx_ocv_ximgproc_superpixel_lsc* superpixel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_lsc_get_number(
    const jyppx_ocv_ximgproc_superpixel_lsc* superpixel,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_lsc_iterate(
    jyppx_ocv_ximgproc_superpixel_lsc* superpixel,
    int num_iterations);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_lsc_get_labels(
    const jyppx_ocv_ximgproc_superpixel_lsc* superpixel,
    jyppx_ocv_mat* labels);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_lsc_get_label_contour_mask(
    const jyppx_ocv_ximgproc_superpixel_lsc* superpixel,
    jyppx_ocv_mat* image,
    int thick_line);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_superpixel_lsc_enforce_label_connectivity(
    jyppx_ocv_ximgproc_superpixel_lsc* superpixel,
    int min_element_size);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_line_detector_create(
    int length_threshold,
    float distance_threshold,
    double canny_th1,
    double canny_th2,
    int canny_aperture_size,
    int do_merge,
    jyppx_ocv_ximgproc_fast_line_detector** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_fast_line_detector_release_handle(
    jyppx_ocv_ximgproc_fast_line_detector* detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_line_detector_detect(
    jyppx_ocv_ximgproc_fast_line_detector* detector,
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* lines);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_line_detector_detect_count(
    jyppx_ocv_ximgproc_fast_line_detector* detector,
    const jyppx_ocv_mat* image,
    int* line_count);