src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.DllImport.cs

#if !NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace OpenCvSharp.Internal.Interop
{
    internal static partial class NativeMethods
    {
        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ni_black_threshold")]
        internal static extern int XImgProcNiBlackThreshold(IntPtr src, IntPtr dst, double maxValue, int type, int blockSize, double k, int binarizationMethod, double r);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_thinning")]
        internal static extern int XImgProcThinning(IntPtr src, IntPtr dst, int thinningType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_anisotropic_diffusion")]
        internal static extern int XImgProcAnisotropicDiffusion(IntPtr src, IntPtr dst, float alpha, float k, int niters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_joint_bilateral_filter")]
        internal static extern int XImgProcJointBilateralFilter(IntPtr joint, IntPtr src, IntPtr dst, int d, double sigmaColor, double sigmaSpace, int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_guided_filter_run")]
        internal static extern int XImgProcGuidedFilter(IntPtr guide, IntPtr src, IntPtr dst, int radius, double eps, int dDepth, double scale);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_rolling_guidance_filter")]
        internal static extern int XImgProcRollingGuidanceFilter(IntPtr src, IntPtr dst, int d, double sigmaColor, double sigmaSpace, int numOfIter, int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_weighted_median_filter")]
        internal static extern int XImgProcWeightedMedianFilter(IntPtr joint, IntPtr src, IntPtr dst, int r, double sigma, int weightType, IntPtr mask);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_dt_filter")]
        internal static extern int XImgProcDtFilter(IntPtr guide, IntPtr src, IntPtr dst, double sigmaSpatial, double sigmaColor, int mode, int numIters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_am_filter")]
        internal static extern int XImgProcAmFilter(IntPtr joint, IntPtr src, IntPtr dst, double sigmaS, double sigmaR, int adjustOutliers);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_bilateral_texture_filter")]
        internal static extern int XImgProcBilateralTextureFilter(IntPtr src, IntPtr dst, int fr, int numIter, double sigmaAlpha, double sigmaAvg);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_preserving_filter")]
        internal static extern int XImgProcEdgePreservingFilter(IntPtr src, IntPtr dst, int d, double threshold);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_global_smoother_filter_run")]
        internal static extern int XImgProcFastGlobalSmootherFilterRun(IntPtr guide, IntPtr src, IntPtr dst, double lambda, double sigmaColor, double lambdaAttenuation, int numIter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_l0_smooth")]
        internal static extern int XImgProcL0Smooth(IntPtr src, IntPtr dst, double lambda, double kappa);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_hough_transform")]
        internal static extern int XImgProcFastHoughTransform(IntPtr src, IntPtr dst, int dstMatDepth, int angleRange, int op, int makeSkew);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_hough_point_to_line")]
        internal static extern int XImgProcHoughPointToLine(int houghX, int houghY, IntPtr srcImgInfo, int angleRange, int makeSkew, int rules, out int x1, out int y1, out int x2, out int y2);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_pei_lin_normalization")]
        internal static extern int XImgProcPeiLinNormalization(IntPtr src, IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_guided_filter_create")]
        internal static extern int XImgProcGuidedFilterCreate(IntPtr guide, int radius, double eps, double scale, out IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_guided_filter_release_handle")]
        internal static extern void XImgProcGuidedFilterReleaseHandle(IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_guided_filter_filter")]
        internal static extern int XImgProcGuidedFilterFilter(IntPtr filter, IntPtr src, IntPtr dst, int dDepth);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_global_smoother_filter_create")]
        internal static extern int XImgProcFastGlobalSmootherFilterCreate(IntPtr guide, double lambda, double sigmaColor, double lambdaAttenuation, int numIter, out IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_global_smoother_filter_release_handle")]
        internal static extern void XImgProcFastGlobalSmootherFilterReleaseHandle(IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_global_smoother_filter_filter")]
        internal static extern int XImgProcFastGlobalSmootherFilterFilter(IntPtr filter, IntPtr src, IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_create")]
        internal static extern int XImgProcSuperpixelSLICCreate(IntPtr image, int algorithm, int regionSize, float ruler, out IntPtr superpixel);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_release_handle")]
        internal static extern void XImgProcSuperpixelSLICReleaseHandle(IntPtr superpixel);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_get_number")]
        internal static extern int XImgProcSuperpixelSLICGetNumber(IntPtr superpixel, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_iterate")]
        internal static extern int XImgProcSuperpixelSLICIterate(IntPtr superpixel, int numIterations);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_get_labels")]
        internal static extern int XImgProcSuperpixelSLICGetLabels(IntPtr superpixel, IntPtr labels);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_get_label_contour_mask")]
        internal static extern int XImgProcSuperpixelSLICGetLabelContourMask(IntPtr superpixel, IntPtr image, int thickLine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_enforce_label_connectivity")]
        internal static extern int XImgProcSuperpixelSLICEnforceLabelConnectivity(IntPtr superpixel, int minElementSize);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_create")]
        internal static extern int XImgProcSuperpixelSEEDSCreate(int imageWidth, int imageHeight, int imageChannels, int numSuperpixels, int numLevels, int prior, int histogramBins, int doubleStep, out IntPtr superpixel);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_release_handle")]
        internal static extern void XImgProcSuperpixelSEEDSReleaseHandle(IntPtr superpixel);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_get_number")]
        internal static extern int XImgProcSuperpixelSEEDSGetNumber(IntPtr superpixel, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_iterate")]
        internal static extern int XImgProcSuperpixelSEEDSIterate(IntPtr superpixel, IntPtr image, int numIterations);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_get_labels")]
        internal static extern int XImgProcSuperpixelSEEDSGetLabels(IntPtr superpixel, IntPtr labels);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_get_label_contour_mask")]
        internal static extern int XImgProcSuperpixelSEEDSGetLabelContourMask(IntPtr superpixel, IntPtr image, int thickLine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_create")]
        internal static extern int XImgProcSuperpixelLSCCreate(IntPtr image, int regionSize, float ratio, out IntPtr superpixel);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_release_handle")]
        internal static extern void XImgProcSuperpixelLSCReleaseHandle(IntPtr superpixel);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_get_number")]
        internal static extern int XImgProcSuperpixelLSCGetNumber(IntPtr superpixel, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_iterate")]
        internal static extern int XImgProcSuperpixelLSCIterate(IntPtr superpixel, int numIterations);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_get_labels")]
        internal static extern int XImgProcSuperpixelLSCGetLabels(IntPtr superpixel, IntPtr labels);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_get_label_contour_mask")]
        internal static extern int XImgProcSuperpixelLSCGetLabelContourMask(IntPtr superpixel, IntPtr image, int thickLine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_enforce_label_connectivity")]
        internal static extern int XImgProcSuperpixelLSCEnforceLabelConnectivity(IntPtr superpixel, int minElementSize);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_create")]
        internal static extern int XImgProcFastLineDetectorCreate(int lengthThreshold, float distanceThreshold, double cannyTh1, double cannyTh2, int cannyApertureSize, int doMerge, out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_release_handle")]
        internal static extern void XImgProcFastLineDetectorReleaseHandle(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_detect")]
        internal static extern int XImgProcFastLineDetectorDetect(IntPtr detector, IntPtr image, IntPtr lines);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_detect_count")]
        internal static extern int XImgProcFastLineDetectorDetectCount(IntPtr detector, IntPtr image, out int lineCount);
